--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "practice-pwa",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
+    "@supabase/supabase-js": "^2.48.0",
     "chart.js": "4.4.6",
     "clsx": "2.1.1",
     "dayjs": "1.11.13",
@@ -33,11 +34,14 @@
     "@types/node": "22.7.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-react": "4.3.2",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-react": "7.34.3",
+    "jsdom": "^24.1.0",
     "postcss": "8.4.47",
     "tailwindcss": "3.4.12",
     "typescript": "5.6.2",
